--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [8080],
 
-	"postCreateCommand": "GOPATH=/go go install github.com/mdempsky/gocode github.com/uudashr/gopkgs/v2/cmd/gopkgs github.com/ramya-rao-a/go-outline github.com/acroca/go-symbols golang.org/x/tools/cmd/guru golang.org/x/tools/cmd/gorename github.com/cweill/gotests/... github.com/fatih/gomodifytags github.com/josharian/impl github.com/davidrjenni/reftools/cmd/fillstruct github.com/haya14busa/goplay/cmd/goplay github.com/godoctor/godoctor github.com/go-delve/delve/cmd/dlv github.com/stamblerre/gocode github.com/rogpeppe/godef golang.org/x/tools/cmd/goimports github.com/golangci/golangci-lint/cmd/golangci-lint golang.org/x/tools/gopls"
+	"postCreateCommand": "GOPATH=/go go install github.com/uudashr/gopkgs/v2/cmd/gopkgs github.com/ramya-rao-a/go-outline github.com/cweill/gotests/... github.com/fatih/gomodifytags github.com/josharian/impl github.com/haya14busa/goplay/cmd/goplay github.com/go-delve/delve/cmd/dlv github.com/golangci/golangci-lint/cmd/golangci-lint golang.org/x/tools/gopls"
 
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
