--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,18 +4,32 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+		{
+			"name": "Frontend",
+			"command": "npm start",
+			"request": "launch",
+			"type": "node-terminal",
+			"cwd": "${workspaceFolder}/frontend",
+			"presentation": {
+				"hidden": true
+			}
+		},
         {
-            "name": "Launch",
+            "name": "Backend",
             "type": "go",
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
             "cwd": "${workspaceFolder}",
-            "env": {
-                "WWW_LOGIN": "user",
-                "WWW_PASSWORD": "pass",
-				"TEMPLATES_FROM_DISK": "true"
-            }
+			"presentation": {
+				"hidden": true
+			}
         }
-    ]
+	],
+	"compounds": [
+		{
+			"name": "App",
+			"configurations": ["Frontend", "Backend"]
+		}
+	]
 }
