use loadable-components to speed up initial app load; auto-focus query field explicitly; remove modals from DOM implicitly

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@loadable/component": "^5.14.1",
     "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
