--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-scripts": "4.0.3",
     "react-tag-autocomplete": "^6.1.0"
   },
