use Algolia instead of bleve; use zerolog instead of Logrus; update linter settings and fix warnings; update dependencies

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,10 @@
             "mode": "debug",
             "program": "${workspaceFolder}",
             "cwd": "${workspaceFolder}",
+			"env": {
+				"LOG_PRETTY": "true",
+				"LOG_COLOR": "true"
+			},
 			"presentation": {
 				"hidden": true
 			}
