--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ indent_style = tab
 indent_size = 4
 trim_trailing_whitespace = true
 
-[**/*.{yml,yaml}]
+[*.{yml,yaml}]
 indent_style = space
 indent_size = 2
