--- a/frontend/.editorconfig
+++ b/frontend/.editorconfig
@@ -1,11 +1,3 @@
-[**.html]
-indent_style = space
-indent_size = 2
-
-[**.js]
-indent_style = space
-indent_size = 2
-
-[**.jsx]
+[**/*.{json,js,jsx,ts,tsx,css}]
 indent_style = space
 indent_size = 2
