--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
+    "react-tagcloud": "^2.3.1",
     "ts-custom-error": "^3.2.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tagcloud": "^1.1.7",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
