update linter settings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,8 @@ issues:
     - (Expect directory permissions to be 0750 or less|Expect file permissions to be 0600 or less)
     # gosec: False positive is triggered by 'src, err := ioutil.ReadFile(filename)'
     - Potential file inclusion via variable
+    # documentation
+    - package-comments
 
 linters:
   enable:
