--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
 		{
 			"name": "Frontend",
-			"command": "npm start",
+			"command": "npm run dev",
 			"request": "launch",
 			"type": "node-terminal",
 			"cwd": "${workspaceFolder}/frontend",
