--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,67 +1,43 @@
 {
   "name": "bookmarks",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
+    "@emotion/react": "^11.10.4",
     "@fontsource/lato": "^4.5.9",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^5.2.0",
-    "@mantine/form": "^5.2.0",
-    "@mantine/hooks": "^5.2.0",
-    "@mantine/notifications": "^5.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.51",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "classnames": "^2.3.1",
+    "@mantine/core": "^5.3.3",
+    "@mantine/form": "^5.3.3",
+    "@mantine/hooks": "^5.3.3",
+    "@mantine/notifications": "^5.3.3",
+    "@tanstack/react-query": "^4.3.4",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
-    "react-scripts": "5.0.1",
     "react-tagcloud": "^2.3.1",
-    "ts-custom-error": "^3.2.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "ts-custom-error": "^3.2.2"
   },
   "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/react-tagcloud": "^1.1.7",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.22.0",
+    "@vitejs/plugin-react": "^2.1.0",
+    "autoprefixer": "^10.4.11",
+    "eslint": "^8.23.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  },
-  "proxy": "http://localhost:8080"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
+  }
 }
