--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@fontsource/lato": "^4.5.9",
+    "@fontsource/lato": "^4.5.10",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^5.3.3",
-    "@mantine/form": "^5.4.0",
+    "@mantine/form": "^5.5.0",
     "@mantine/hooks": "^5.3.3",
-    "@mantine/notifications": "^5.4.0",
-    "@tanstack/react-query": "^4.3.9",
+    "@mantine/notifications": "^5.5.0",
+    "@tanstack/react-query": "^4.8.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,13 +31,14 @@
     "@types/react-tagcloud": "^1.1.7",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.23.1",
+    "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.3"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4",
+    "vite-plugin-html": "^3.2.0"
   }
 }
