use chi instead of Gorilla; always run npm install when running "npm run dev"; update dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,41 +4,41 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm install --no-audit --no-funds && vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.10.5",
     "@fontsource/lato": "^4.5.10",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^5.3.3",
-    "@mantine/form": "^5.5.0",
+    "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.3.3",
-    "@mantine/notifications": "^5.5.0",
-    "@tanstack/react-query": "^4.8.0",
+    "@mantine/notifications": "^5.10.2",
+    "@tanstack/react-query": "^4.23.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tagcloud": "^2.3.1",
-    "ts-custom-error": "^3.2.2"
+    "ts-custom-error": "^3.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/react-tagcloud": "^1.1.7",
-    "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.24.0",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.4",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "vite": "^3.2.5",
     "vite-plugin-html": "^3.2.0"
   }
 }
