--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^3.2.5",
