--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,5 +2,8 @@
 	"editorconfig": true,
 	"printWidth": 120,
 	"singleQuote": true,
-	"semi": false
+	"semi": false,
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"tailwindFunctions": ["clsx", "classNames"],
+	"tailwindAttributes": ["classNames"]
 }
