--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,44 +4,48 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm install --no-audit --no-fund && vite",
+    "dev": "pnpm install && vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@fontsource/roboto-condensed": "^4.5.9",
-    "@fontsource/roboto-flex": "^4.5.5",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@emotion/react": "^11.11.1",
+    "@fontsource/roboto-condensed": "^5.0.4",
+    "@fontsource/roboto-flex": "^5.0.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^5.3.3",
-    "@mantine/form": "^5.10.5",
-    "@mantine/hooks": "^5.3.3",
-    "@mantine/notifications": "^5.10.5",
-    "@tanstack/react-query": "^4.24.10",
+    "@mantine/core": "^6.0.16",
+    "@mantine/form": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
+    "@mantine/notifications": "^6.0.16",
+    "@tanstack/react-query": "^4.29.19",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-with-preload": "^2.2.1",
     "react-tagcloud": "^2.3.1",
     "ts-custom-error": "^3.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-tagcloud": "^1.1.7",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.35.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@vitejs/plugin-react": "^4.0.2",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.3",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4",
+    "postcss": "^8.4.24",
+    "prettier": "<3.0.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0"
   }
 }
