use zod, ky, and bourne; use types instead of interfaces

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hapi/bourne": "^3.0.0",
     "@mantine/core": "^6.0.16",
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
     "@mantine/notifications": "^6.0.16",
     "@tanstack/react-query": "^4.29.19",
     "clsx": "^1.2.1",
+    "ky": "^0.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-with-preload": "^2.2.1",
     "react-tagcloud": "^2.3.1",
-    "ts-custom-error": "^3.3.1"
+    "ts-custom-error": "^3.3.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
