--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@fontsource/roboto-condensed": "^5.0.4",
-    "@fontsource/roboto-flex": "^5.0.4",
+    "@fontsource/roboto-condensed": "^5.0.5",
+    "@fontsource/roboto-flex": "^5.0.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hapi/bourne": "^3.0.0",
-    "@mantine/core": "^6.0.16",
-    "@mantine/form": "^6.0.16",
-    "@mantine/hooks": "^6.0.16",
-    "@mantine/notifications": "^6.0.16",
-    "@tanstack/react-query": "^4.29.19",
-    "clsx": "^1.2.1",
+    "@mantine/core": "^6.0.17",
+    "@mantine/form": "^6.0.17",
+    "@mantine/hooks": "^6.0.17",
+    "@mantine/notifications": "^6.0.17",
+    "@tanstack/react-query": "^4.32.0",
+    "clsx": "^2.0.0",
     "ky": "^0.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,22 +32,22 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
     "@types/react-tagcloud": "^1.1.7",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@vitejs/plugin-react": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.44.0",
+    "eslint": "^8.46.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.24",
-    "prettier": "<3.0.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
-    "vite": "^4.4.0",
+    "vite": "^4.4.7",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0"
   }
