--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,14 @@
 {
   "name": "bookmarks",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "pnpm install && vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "pnpm install && next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@fontsource/roboto-condensed": "^5.0.13",
-    "@fontsource/roboto-flex": "^5.0.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -19,36 +16,28 @@
     "@mantine/core": "^6.0.21",
     "@mantine/form": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
-    "@mantine/notifications": "^6.0.21",
     "@tanstack/react-query": "^5.0.5",
+    "@vercel/fetch": "^7.0.0",
     "clsx": "^2.0.0",
-    "ky": "^1.1.1",
+    "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-lazy-with-preload": "^2.2.1",
     "react-tagcloud": "^2.3.3",
-    "ts-custom-error": "^3.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-tagcloud": "^1.1.10",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.52.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "8.52.0",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-html": "^3.2.0"
+    "typescript": "^5.2.2"
   }
 }
